fix footer links on mobile

--- a/less/style.less
+++ b/less/style.less
@@ -365,6 +365,18 @@ footer {
 		}
 	}
 
+	footer {
+		text-align: center;
+
+		a {
+			display: block;
+			float: none;
+			margin-top: 25px;
+			margin-bottom: 25px;
+			text-align: center;
+		}
+	}
+
 	.features {
 
 		figure {
